Phani : Fix CSS for text-wrap with ellipsis (#103)

--- a/src/features/DisplayControls/DrugChart/styles/DrugListCell.scss
+++ b/src/features/DisplayControls/DrugChart/styles/DrugListCell.scss
@@ -50,7 +50,7 @@
 }
 
 .name-tooltip {
-  max-width: 98%;
+  max-width: 100%;
 }
 
 .dosage {
